[gd_scene load_steps=5 format=3 uid="uid://bgo5wk5qgm4co"]

[ext_resource type="Script" uid="uid://bx7yck6inujd7" path="res://menus/results_screen/results_screen.gd" id="1_im8n6"]
[ext_resource type="Texture2D" uid="uid://doi3o74wjlh3u" path="res://characters/sonic/sprites/Sonic Portrait.png" id="2_t68mw"]
[ext_resource type="PackedScene" uid="uid://dmqtdie76rgi8" path="res://menus/background.tscn" id="2_u448v"]
[ext_resource type="PackedScene" uid="uid://05h8siy11cn" path="res://menus/results_screen/results_frame.tscn" id="3_ot5hy"]

[node name="ResultsScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_im8n6")

[node name="Background" parent="." instance=ExtResource("2_u448v")]

[node name="results_frame" parent="." instance=ExtResource("3_ot5hy")]
layout_mode = 1
offset_left = 48.0
offset_right = 0.0

[node name="Winner" type="Label" parent="."]
layout_mode = 0
offset_right = 240.0
offset_bottom = 23.0
text = "Winner"
metadata/_edit_lock_ = true

[node name="BackButton" type="Button" parent="."]
layout_mode = 0
offset_left = 151.0
offset_top = 134.0
offset_right = 239.0
offset_bottom = 159.0
theme_override_font_sizes/font_size = 12
text = "Back to Menu"
metadata/_edit_lock_ = true

[node name="WinnerPortrait" type="TextureRect" parent="."]
layout_mode = 0
offset_top = 23.0
offset_right = 87.0
offset_bottom = 94.0
texture = ExtResource("2_t68mw")
metadata/_edit_lock_ = true

[node name="WinnerInfo" type="Label" parent="."]
layout_mode = 0
offset_left = 120.0
offset_right = 232.0
offset_bottom = 40.0
text = "text"

[node name="OtherPlayerInfo" type="Label" parent="."]
layout_mode = 0
offset_top = 98.0
offset_right = 240.0
offset_bottom = 147.0
theme_override_font_sizes/font_size = 8
metadata/_edit_lock_ = true

[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
